// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScansEmptyState Component should render a basic component: basic 1`] = `
<EmptyState
  className="quipucords-empty-state"
  variant="large"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h1"
  >
    t(view.empty-state, {"context":"title","count":20,"name":"Quipucords"})
  </Title>
  <EmptyStateBody>
    t(view.empty-state, {"context":"description","count":20})
  </EmptyStateBody>
  <EmptyStatePrimary>
    <Button
      onClick={[Function]}
    >
      t(view.empty-state_label, {"context":"source-navigate","count":20})
    </Button>
  </EmptyStatePrimary>
</EmptyState>
`;

exports[`ScansEmptyState Component should render messaging if sources do not exist: do not exist 1`] = `
<EmptyState
  className="quipucords-empty-state"
  variant="large"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h1"
  >
    t(view.empty-state, {"context":"title","name":"Quipucords"})
  </Title>
  <EmptyStateBody>
    t(view.empty-state, {"context":"description"})
  </EmptyStateBody>
  <EmptyStatePrimary>
    <Button
      onClick={[Function]}
    >
      t(view.empty-state_label, {"context":"source-navigate"})
    </Button>
  </EmptyStatePrimary>
</EmptyState>
`;
